--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Asus\\OneDrive\\Documents\\GitHub\\pytorch-autograd-Orangen123\\.venv\\Lib\\site-packages\\torch\\_subclasses\\functional_tensor.py:276: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\torch\\csrc\\utils\\tensor_numpy.cpp:81.)\n",
+      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
+     ]
+    }
+   ],
    "source": [
     "from torch import nn\n",
     "import torch"
@@ -36,12 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def exercise_1() -> torch.Tensor:\n",
-    "    raise NotImplementedError\n",
+    "    x = torch.tensor(2.0, requires_grad=True)\n",
+    "    y = x**2 + 3*x + 8\n",
+    "    y.backward()\n",
+    "    return x.grad.to(dtype=torch.float32)\n",
     "\n",
     "ex1_sol = exercise_1()\n",
     "assert torch.equal(ex1_sol, torch.tensor(7.0))"
@@ -56,20 +68,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor([1, 2, 3, 4, 5])\n",
+    "x = torch.tensor([1, 2, 3, 4, 5], dtype=torch.float32)\n",
     "\n",
     "def exercise_2(x) -> tuple:\n",
-    "    # all the output and gradients are tensors\n",
+    "    torch.manual_seed(0)\n",
     "\n",
-    "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
-    "    \n",
-    "    raise NotImplementedError\n",
-    "    # you must return in this format\n",
-    "    # return (output, weight_grads_tensor)\n",
+    "    # Create weight tensor with requires_grad=True\n",
+    "    w = torch.randn_like(x, dtype=torch.float32, requires_grad=True)\n",
+    "\n",
+    "    # Bias is constant (not trainable)\n",
+    "    b = 5.0\n",
+    "\n",
+    "    # Linear combination\n",
+    "    y = torch.dot(w, x) + b\n",
+    "\n",
+    "    # Backpropagate\n",
+    "    y.backward()\n",
+    "\n",
+    "    return y.detach(), w.grad\n",
     "\n",
     "ex2_sol = exercise_2(x)\n",
     "\n",
@@ -213,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
