--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,20 +106,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = torch.tensor([1, 2, 3, 4, 5])\n",
     "\n",
     "def exercise_3(x) -> tuple:\n",
-    "     # all the output and gradients are tensors\n",
-    "    \n",
-    "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
+    "    torch.manual_seed(0)  # fix seed for reproducibility\n",
     "\n",
-    "    raise NotImplementedError\n",
-    "    # you must return in this format\n",
-    "    # return (output, weight_grads_tensor)\n",
+    "    # Initialize weights with requires_grad=True\n",
+    "    w = torch.randn_like(x, dtype=torch.float32, requires_grad=True)\n",
+    "\n",
+    "    # Biases are [1.0, 2.0, 3.0, 4.0, 5.0]\n",
+    "    b = torch.tensor([1, 2, 3, 4, 5], dtype=torch.float32)\n",
+    "\n",
+    "    # Compute output for each feature: w_j * x_j + b_j\n",
+    "    y = w * x + b\n",
+    "\n",
+    "    # Backward pass to compute gradients\n",
+    "    y.sum().backward()  # sum so backward works properly\n",
+    "\n",
+    "    return y.detach(), w.grad\n",
+    "\n",
     "\n",
     "ex3_sol = exercise_3(x)\n",
     "assert torch.all((ex3_sol[0] - torch.tensor([ 2.5410,  1.4131, -3.5364,  6.2737, -0.4226 ], dtype=torch.float32)) < 5e-4).item()\n",
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,11 +153,24 @@
     "target = torch.tensor([2.0])\n",
     "\n",
     "def exercise_4(data, target) -> tuple:\n",
-    "    # both gradients are tensors\n",
+    "    torch.manual_seed(0)\n",
     "\n",
-    "    raise NotImplementedError\n",
-    "    # you must return in this format\n",
-    "    # return (weight_grads_tensor, bias_grads_tensor)\n",
+    "    # Initialize weights and bias with gradient tracking\n",
+    "    w = torch.randn_like(data, requires_grad=True)\n",
+    "    torch.manual_seed(0)\n",
+    "    b = torch.randn(1, requires_grad=True)\n",
+    "\n",
+    "    # Linear function: f(x) = dot(w, x) + b\n",
+    "    output = torch.dot(w, data) + b\n",
+    "\n",
+    "    # Compute MSE loss\n",
+    "    loss = torch.nn.functional.mse_loss(output, target)\n",
+    "\n",
+    "    # Backward pass\n",
+    "    loss.backward()\n",
+    "\n",
+    "    return (w.grad, b.grad)\n",
+    "\n",
     "\n",
     "ex4_sol = exercise_4(data, target)\n",
     "assert ex4_sol[0].dim() == 1 and ex4_sol[1].dim() == 1, print(\"All tensors must have dim == 1\")\n",
@@ -193,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,29 +225,43 @@
     "val_x = torch.randint(3, 10, (10, 5), dtype=torch.float32)\n",
     "\n",
     "def exercise_5(train_x, train_y, val_x) -> torch.Tensor:\n",
-    "\n",
+    "    \n",
+    "    # Define the network using class-style like in the example\n",
     "    class MyNetwork(nn.Module):\n",
     "        def __init__(self):\n",
-    "            raise NotImplementedError\n",
+    "            super(MyNetwork, self).__init__()\n",
+    "            self.layer1 = nn.Linear(5, 4)\n",
+    "            self.layer2 = nn.Linear(4, 2)\n",
+    "            self.sigmoid = nn.Sigmoid()\n",
     "\n",
     "        def forward(self, x):\n",
-    "            # layer 1\n",
+    "            x = self.layer1(x)\n",
+    "            x = self.sigmoid(x)\n",
+    "            x = self.layer2(x)\n",
+    "            x = self.sigmoid(x)\n",
+    "            return x\n",
     "\n",
-    "            # layer 2\n",
+    "    model = MyNetwork()\n",
+    "    loss_fn = nn.BCELoss()\n",
+    "    optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n",
     "\n",
-    "            return x[:,0] # replace (or not) x with your tensor variable\n",
+    "    # One-hot encode labels for 2 output classes: [1, 0] for class 0, [0, 1] for class 1\n",
+    "    y_onehot = torch.zeros((train_y.size(0), 2))\n",
+    "    y_onehot[torch.arange(train_y.size(0)), train_y.long()] = 1.0\n",
     "\n",
-    "    loss = __\n",
-    "    model = __\n",
-    "    optimizer = __\n",
-    "\n",
-    "    # train loop\n",
+    "    # training loop (2 epochs)\n",
     "    for i in range(2):\n",
     "        output = model(train_x)\n",
-    "        \n",
-    "        # your implementation\n",
+    "        loss = loss_fn(output, y_onehot)\n",
     "\n",
-    "    raise NotImplementedError\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    # predict on val_x\n",
+    "    val_output = model(val_x)\n",
+    "    return val_output\n",
+    "\n",
     "\n",
     "ex5_sol = exercise_5(train_x=train_x, train_y=train_y, val_x=val_x)"
    ]
@@ -233,7 +269,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
