--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,44 +59,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "dot : expected both vectors to have same dtype, but found Float and Long",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[32m     16\u001b[39m     y.backward()\n\u001b[32m     18\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m y.detach(), w.grad\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m ex2_sol = \u001b[43mexercise_2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     22\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m (ex2_sol[\u001b[32m0\u001b[39m] - torch.tensor(-\u001b[32m3.7311\u001b[39m) < \u001b[32m1e-4\u001b[39m).item()\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m torch.equal(ex2_sol[\u001b[32m1\u001b[39m], torch.tensor([\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m, \u001b[32m5\u001b[39m], dtype=torch.float32))\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 13\u001b[39m, in \u001b[36mexercise_2\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m     10\u001b[39m b = \u001b[32m5.0\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Linear combination\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m y = \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mw\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m + b\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Backpropagate\u001b[39;00m\n\u001b[32m     16\u001b[39m y.backward()\n",
-      "\u001b[31mRuntimeError\u001b[39m: dot : expected both vectors to have same dtype, but found Float and Long"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = torch.tensor([1, 2, 3, 4, 5])\n",
     "\n",
     "def exercise_2(x) -> tuple:\n",
+    "    # all the output and gradients are tensors\n",
     "    torch.manual_seed(0)\n",
+    "    \n",
+    "    weights = torch.randn_like(x,dtype=torch.float32, requires_grad=True)\n",
+    "    bias = 5.0\n",
+    "    x = x.to(dtype=torch.float32)\n",
+    "    output = torch.dot(weights, x) + bias\n",
     "\n",
-    "    # Create weight tensor with requires_grad=True\n",
-    "    w = torch.randn_like(x, dtype=torch.float32, requires_grad=True)\n",
+    "    \n",
+    "    # you must return in this format\n",
+    "    output.backward()\n",
     "\n",
-    "    # Bias is constant (not trainable)\n",
-    "    b = 5.0\n",
-    "\n",
-    "    # Linear combination\n",
-    "    y = torch.dot(w, x) + b\n",
-    "\n",
-    "    # Backpropagate\n",
-    "    y.backward()\n",
-    "\n",
-    "    return y.detach(), w.grad\n",
+    "    # return (output, weight_grads_tensor)\n",
+    "    return output, weights.grad\n",
     "\n",
     "ex2_sol = exercise_2(x)\n",
-    "\n",
     "assert (ex2_sol[0] - torch.tensor(-3.7311) < 1e-4).item()\n",
     "assert torch.equal(ex2_sol[1], torch.tensor([1, 2, 3, 4, 5], dtype=torch.float32))"
    ]
@@ -110,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
